--- a/frontend/src/pug/page/index.pug
+++ b/frontend/src/pug/page/index.pug
@@ -8,3 +8,5 @@ include /components/plain-text
 
 block content-block
   .wrap
+    +plain-text('Noto Sans JP regular').text
+    img(src=getImage('image.png'))
