--- a/frontend/src/scss/page/index.scss
+++ b/frontend/src/scss/page/index.scss
@@ -3,3 +3,15 @@
   margin-bottom: 20px;
   font-size: 40px;
 }
+
+canvas {
+  display: block;
+}
+
+button {
+  position: absolute;
+  top: 10px;
+  left: 10px;
+  background: #ccc;
+  padding: 5px;
+}
